fix(waybar): window jumping

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,33 +1,37 @@
-*{
-    font-family: JetBrainsMono;
-    font-size: 13px;
-    min-height: 0;
-    color: white;
+* {
+  font-family: FiraCode;
+  font-size: 13px;
+  min-height: 15px;
+  color: white;
 }
 
 window#waybar {
-    background-color: #333333;
+  background-color: #333333;
 }
 
-#workspaces{
-    margin-top: 3px;
-    margin-bottom: 2px;
-    margin-right: 10px;
-    margin-left: 25px;
+#workspaces {
+  margin-top: 3px;
+  margin-bottom: 2px;
+  margin-right: 10px;
+  margin-left: 25px;
 }
 
-#workspaces button{
-    border-radius: 15px;
-    margin-right: 10px;
-    padding: 1px 10px;
-    font-weight: bolder;
-    background-color: #181818;
+#workspaces button {
+  border-radius: 15px;
+  margin-right: 10px;
+  padding: 1px 10px;
+  font-weight: bolder;
+  background-color: #181818;
 }
 
-#workspaces button.active, #workspaces button.focused{
-    padding: 0 22px;
-    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
-    background: #7C9D96;
+#workspaces button.active,
+#workspaces button.focused {
+  padding: 1px 10px;
+  box-shadow:
+    rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  background: #7c9d96;
 }
 
 #tray,
@@ -46,5 +50,5 @@ window#waybar {
 #battery,
 #clock,
 #network {
-	padding: 0 10px;
+  padding: 0 10px;
 }
